# pandatex

./: .gitignore  README.md  pyproject.toml
src/pandatex/: __init__.py  condval.py  filter.py  group.py  table.py
tests/: test_table.py
